--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "\"Zeyaur Rahman\"",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "accessibility": "^5.0.7",
+    "chalk": "^5.3.0",
+    "one-liner-joke": "^1.2.2"
+  }
 }
