--- a/23-Backend Project 1 Part-1 Scatch - A Premium Bag Shop/Scatch/package.json
+++ b/23-Backend Project 1 Part-1 Scatch - A Premium Bag Shop/Scatch/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1"
   }
